--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
   "devDependencies": {
     "@vuepress/client": "2.0.0-beta.61",
     "@vuepress/plugin-register-components": "^2.0.0-beta.61",
+    "@vuepress/utils": "2.0.0-beta.61",
     "vue": "^3.2.47",
     "vuepress": "2.0.0-beta.61",
-    "vuepress-theme-hope": "2.0.0-beta.202",
-    "@vuepress/utils": "2.0.0-beta.61",
-    "vuepress-plugin-search-pro": "2.0.0-beta.201"
+    "vuepress-plugin-search-pro": "2.0.0-beta.201",
+    "vuepress-theme-hope": "2.0.0-beta.202"
+  },
+  "dependencies": {
+    "lxgw-wenkai-lite-webfont": "^1.7.0"
   }
 }
